force-app/main/default/objects/SF_AgenticGateway_Allow__mdt/SF_AgenticGateway_Allow__mdt.object-meta.xml
<CustomObject>
    <label>SF Agentic Gateway Allow</label>
    <pluralLabel>SF Agentic Gateway Allows</pluralLabel>
</CustomObject>