force-app/main/default/objects/SF_AgenticGateway_Allow__mdt/fields/AsyncMode__c.field-meta.xml
<CustomField>
    <fullName>AsyncMode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Async Mode</label>
    <type>Checkbox</type>
</CustomField>