force-app/main/default/objects/SF_AgenticGateway_Allow__mdt/fields/DispatchType__c.field-meta.xml
<CustomField>
    <fullName>DispatchType__c</fullName>
    <label>Dispatch Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>