force-app/main/default/objects/SF_AgenticGateway_Allow__mdt/fields/MaxBatchSize__c.field-meta.xml
<CustomField>
    <fullName>MaxBatchSize__c</fullName>
    <label>Max Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>